tests/invalid/Parameter_Invalid_2.whiley
int f(int $):
    return 1
